created db with context

--- a/ImageConverterWebApi/appsettings.json
+++ b/ImageConverterWebApi/appsettings.json
@@ -9,5 +9,8 @@
   },
   "MyConfiguration": {
     "AvailableExtensions": [ "png", "jpg", "bmp" ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Filename=users.sqlite"
   }
 }
