--- a/ImageConverterWebApi/.editorconfig
+++ b/ImageConverterWebApi/.editorconfig
@@ -279,6 +279,9 @@ csharp_style_prefer_local_over_anonymous_function = true:suggestion
 csharp_style_implicit_object_creation_when_type_is_apparent = true:suggestion
 csharp_style_prefer_tuple_swap = true:suggestion
 
+# CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
+dotnet_diagnostic.CS8618.severity = silent
+
 [*.{cs,vb}]
 
 # CA1822: Mark members as static
