--- a/ImageConverterWebApi/appsettings.json
+++ b/ImageConverterWebApi/appsettings.json
@@ -11,6 +11,6 @@
     "AvailableExtensions": [ "png", "jpg", "bmp" ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Filename=users.sqlite"
+    "DefaultConnection": "Filename=DB/users.sqlite"
   }
 }
