--- a/ImageConverterWebApi/.editorconfig
+++ b/ImageConverterWebApi/.editorconfig
@@ -282,6 +282,9 @@ csharp_style_prefer_tuple_swap = true:suggestion
 # CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
 dotnet_diagnostic.CS8618.severity = silent
 
+# CS8605: Unboxing a possibly null value.
+dotnet_diagnostic.CS8605.severity = silent
+
 [*.{cs,vb}]
 
 # CA1822: Mark members as static
