changed secret word

--- a/ImageConverterWebApi/appsettings.json
+++ b/ImageConverterWebApi/appsettings.json
@@ -13,5 +13,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Filename=DB/users.sqlite"
   },
-  "Secret": "gaysexherrington"
+  "Secret": "extraterrestrial"
 }
