--- a/ImageConverterWebApi/appsettings.json
+++ b/ImageConverterWebApi/appsettings.json
@@ -11,7 +11,7 @@
     "AvailableExtensions": [ "png", "jpg", "bmp" ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Filename=DB/users.sqlite"
+    "DefaultConnection": "Server=u1589542.plsk.regruhosting.ru;Port=3306;Database=u1589542_default;Uid=u1589542_default;Pwd=Fk34!xf6"
   },
   "Secret": "extraterrestrial"
 }
